--- a/info.plist
+++ b/info.plist
@@ -119,8 +119,8 @@
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>0.0.6</string>
+	<string>0.0.14</string>
 	<key>webaddress</key>
-	<string>https://github.com/beygee</string>
+	<string>https://github.com/beygee/alfred-ant-design-docs</string>
 </dict>
 </plist>
